// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - ShoppingBag:  should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  height: 2.75rem;
  line-height: 1.125rem;
}

.c0.c0 i {
  font-style: normal;
  font-size: 0.688rem;
  text-align: center;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  font-weight: bold;
  position: absolute;
  width: 100%;
  display: block;
  cursor: pointer;
  color: #fff;
}

.c0.c0 a {
  padding: 0.625rem 0;
}

.c0.c0 button {
  padding: 0.625rem 0.625rem 0.5625rem 0.625rem;
  border: 0;
  background: 0;
}

@media (min-width:1024px) {
  .c0 {
    line-height: initial;
  }
}

@media (min-width:768px) {
  .c0 {
    height: 2.8125rem;
  }
}

@media (min-width:768px) {
  .c0.c0 i {
    font-size: 0.75rem;
  }
}

@media (min-width:1024px) {

}

@media (min-width:768px) {

}

<div
    class="shoppingbag"
    data-testid="header-shopping-bag"
  >
    <div
      class="PrivateHiddenCss-mdUp-8"
    >
      <div
        class="c0"
        data-testid="header-shopping-bag-link-el"
      >
        <a
          data-ga-v1="Quick Links"
          data-ga-v2="Shopping bag"
          href="fakeamido.com/shoppingbag"
          rel="nofollow"
        >
          <img
            alt="photo"
            src="/abc123"
          />
          <i>
            0
          </i>
        </a>
      </div>
    </div>
    <div
      class="PrivateHiddenCss-smDown-6"
    >
      <div
        class="c0"
        data-testid="shopping-bag-link-button"
      >
        <button
          data-ga-v1="Quick Links"
          data-ga-v2="Shopping bag"
          type="button"
        >
          <img
            alt="photo"
            src="/abc123"
          />
          <i>
            0
          </i>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - ShoppingBag:  should match the snapshot when isBagLoading is true 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  height: 2.75rem;
  line-height: 1.125rem;
}

.c0.c0 i {
  font-style: normal;
  font-size: 0.688rem;
  text-align: center;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  font-weight: bold;
  position: absolute;
  width: 100%;
  display: block;
  cursor: pointer;
  color: #fff;
}

.c0.c0 a {
  padding: 0.625rem 0;
}

.c0.c0 button {
  padding: 0.625rem 0.625rem 0.5625rem 0.625rem;
  border: 0;
  background: 0;
}

@media (min-width:1024px) {
  .c0 {
    line-height: initial;
  }
}

@media (min-width:768px) {
  .c0 {
    height: 2.8125rem;
  }
}

@media (min-width:768px) {
  .c0.c0 i {
    font-size: 0.75rem;
  }
}

@media (min-width:1024px) {

}

@media (min-width:768px) {

}

<div
    class="shoppingbag"
    data-testid="header-shopping-bag"
  >
    <div
      class="PrivateHiddenCss-mdUp-53"
    >
      <div
        class="c0"
        data-testid="header-shopping-bag-link-el"
      >
        <a
          data-ga-v1="Quick Links"
          data-ga-v2="Shopping bag"
          href="fakeamido.com/shoppingbag"
          rel="nofollow"
        >
          <img
            alt="photo"
            src="/abc123"
          />
          <i />
        </a>
      </div>
    </div>
    <div
      class="PrivateHiddenCss-smDown-51"
    >
      <div
        class="c0"
        data-testid="shopping-bag-link-button"
      >
        <button
          data-ga-v1="Quick Links"
          data-ga-v2="Shopping bag"
          type="button"
        >
          <img
            alt="photo"
            src="/abc123"
          />
          <i />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
